
26 Mar 2011
  - reverted flicker changes (*check in more often!!*) except for choice 
  - show historical actively would not have enable checkbox on slider, choice; why not? changed

--- check in ---

26 Mar 2011
  - rationalize min/max/big/default privacy values. min for tictac setting is MINPRIV+1

28 Mar 2011
  - flicker fix is to not re-alloc vo displays constantly; fixed messed up slider to get spurious val=0 actions on table reload data
  - changed table reloadData for val changed to just reload fn cells
  - tweak display of slider value for checkbox dis/enable
  - choice value +1 so disabled=0, all selections are positive value
  - voNumber startwithlast picks previous entry by current tracker date, not just last by date
  - start cleaning up NSLog's - need #if debug control

30 Mar 2011
  - tracked down problem in slider to check for useVO on [update], caused wipe of data to set useVO
  + need to clean up either enableVO/disableVO everywhere, or get rid of unused checkbuttonusevo

--- check in ---

  - fixed a memory leak - setVtypes
  + need way to control debug NSLog()s but only option seems to be #if DEBUG wrappers...

31 Mar 2011
  - converted all NSLog to #if DEBUG... controlled 

--- check in ---

09 April 2011
  - error because choice value +1 => not voDisplay'd correctly : added getSegmentIndexForValue routine
  --> bug appearance was all subviews buggered after segmentedControl set to invalid index
  - further complexity: UIControlEventValueCHanged gen'd when val set, not just when user activates -- but slider not this way!
  - privacy cancel from setpass triggered toptf resignfirstresponder, same as setp -> set pass to ""; fixed by rewrite setp, cancelp
  - assuming not null autoscale (= not default) meant errors in graph scale - fixed -- TODO: search for more of these

10 April 2011
  - fixed problem shrinking choice buttons, width was reset when style set.  TODO: seg control needs to be centered in subview in this case

--- check in ---


